Fixed an issue with editor resizing on Firefox
Firefox has an issue with the dragbar for the editor resize being an
image. It'll drag the image around rather than resize the editor. To
remedy this, the img was removed and a div element styled to look like
the image is used instead.

--- a/app/scss/epochtalk/epochtalk.scss
+++ b/app/scss/epochtalk/epochtalk.scss
@@ -987,13 +987,20 @@ pagination {
 }
 .editor-container-bar {
   display: block;
-  position: relative;
-  text-align: center;
-  top: -5px;
-  width: 100%;
-  height: 0;
+  position: absolute;
+  top: 5px;
+  left: 40%;
+  right: 40%;
+  height: 10px;
   z-index: 10;
   cursor: ns-resize;
+  .bar {
+    height: 5px;
+    width: 35px;
+    border-radius: 10px;
+    background-color: gray;
+    margin: auto;
+  }
 }
 
 .editor-top-bar {
